@@ -10,8 +10,9 @@ apport (0.34) UNRELEASED; urgency=low
   * apport/python_hook.py: Chmod the generated report to 0600 to not expose
     potentially private data to the world, and to be consistent with other
     crash reports.
+  * apport/fileutils.py: Add check_files_md5() and test cases.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 21 Dec 2006 12:17:44 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 22 Dec 2006 11:50:46 +0100
 
 apport (0.33) feisty; urgency=low
 
